--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "description": "Wordpress with 'everything' and no styling, to make rolling out new builds super quick",
   "author": "Nathan Edwards <nathan@cowfields.co.uk>",
   "devDependencies": {
-    "gulp": "latest",
-    "gulp-watch": "latest",
-    "gulp-less": "latest",
-    "gulp-uglifycss": "latest",
-    "gulp-autoprefixer": "latest",
     "browser-sync": "latest",
-    "gulp-uglify": "latest",
-    "gulp-jshint": "latest",
-    "gulp-sourcemaps": "latest",
-    "gulp-image-resize": "latest",
+    "gulp": "latest",
+    "gulp-autoprefixer": "latest",
     "gulp-changed": "latest",
-    "gulp-rename": "latest",
     "gulp-combine-media-queries": "latest",
-    "gulp-shell": "~0.2.11",
-    "requirejs": "latest",
+    "gulp-image-resize": "latest",
+    "gulp-jshint": "latest",
+    "gulp-less": "latest",
+    "gulp-plumber": "^1.0.0",
+    "gulp-rename": "latest",
     "gulp-run": "~1.6.6",
+    "gulp-shell": "~0.2.11",
+    "gulp-sourcemaps": "latest",
+    "gulp-uglify": "latest",
+    "gulp-uglifycss": "latest",
+    "gulp-watch": "latest",
+    "requirejs": "latest",
     "underscore": "~1.7.0"
   }
 }
